--- a/packages/SystemUI/res/values-rm/strings.xml
+++ b/packages/SystemUI/res/values-rm/strings.xml
@@ -86,11 +86,11 @@
     <skip />
     <!-- no translation found for always_use_accessory (1210954576979621596) -->
     <skip />
-    <!-- no translation found for usb_debugging_title (1114766024068112429) -->
+    <!-- no translation found for usb_debugging_title (4513918393387141949) -->
     <skip />
-    <!-- no translation found for usb_debugging_message (719863946976291180) -->
+    <!-- no translation found for usb_debugging_message (2220143855912376496) -->
     <skip />
-    <!-- no translation found for usb_debugging_always (4253099426793114693) -->
+    <!-- no translation found for usb_debugging_always (303335496705863070) -->
     <skip />
     <!-- no translation found for compat_mode_on (6623839244840638213) -->
     <skip />
@@ -278,7 +278,7 @@
     <skip />
     <!-- no translation found for quick_settings_brightness_label (6968372297018755815) -->
     <skip />
-    <!-- no translation found for quick_settings_ime_label (6877325300716130498) -->
+    <!-- no translation found for quick_settings_ime_label (7073463064369468429) -->
     <skip />
     <!-- no translation found for quick_settings_location_label (3292451598267467545) -->
     <skip />
@@ -301,6 +301,10 @@
     <!-- no translation found for quick_settings_wifi_display_label (6653501376641018614) -->
     <skip />
     <!-- no translation found for quick_settings_wifi_display_no_connection_label (6255615315258869136) -->
+    <skip />
+    <!-- no translation found for quick_settings_brightness_dialog_title (8599674057673605368) -->
+    <skip />
+    <!-- no translation found for quick_settings_brightness_dialog_auto_brightness_label (5064982743784071218) -->
     <skip />
     <!-- no translation found for wifi_display_scan (8453135922233546097) -->
     <skip />
